Got Name to display in UserSelection ,  Icon to load in  GUI,(on both admincreation/py and main.py), loads screen accordinly to if practioner or user is signing in.

--- a/AdminScreen.ui
+++ b/AdminScreen.ui
@@ -362,7 +362,7 @@ text-decoration: underline;
     </item>
     <item>
      <property name="text">
-      <string>Practioner</string>
+      <string>Practitioner</string>
      </property>
     </item>
    </widget>
