--- a/UserList.ui
+++ b/UserList.ui
@@ -31,7 +31,7 @@ background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba
      <rect>
       <x>530</x>
       <y>480</y>
-      <width>121</width>
+      <width>311</width>
       <height>51</height>
      </rect>
     </property>
@@ -42,7 +42,7 @@ color: rgb(255,255,255);
 background-color: rgb(147, 136, 162)</string>
     </property>
     <property name="text">
-     <string>Submit</string>
+     <string>UserList</string>
     </property>
    </widget>
    <widget class="QLabel" name="WelcomeName">
