--- a/UserList.ui
+++ b/UserList.ui
@@ -26,12 +26,12 @@
     <string notr="true">QWidget#widget{
 background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(170, 255, 255, 255), stop:0.0113636 rgba(167, 199, 231, 255), stop:1 rgba(0, 128, 128, 255))}</string>
    </property>
-   <widget class="QPushButton" name="signInButton">
+   <widget class="QPushButton" name="submitButton">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>480</y>
-      <width>311</width>
+      <x>1030</x>
+      <y>740</y>
+      <width>161</width>
       <height>51</height>
      </rect>
     </property>
@@ -42,14 +42,14 @@ color: rgb(255,255,255);
 background-color: rgb(147, 136, 162)</string>
     </property>
     <property name="text">
-     <string>UserList</string>
+     <string>Submit</string>
     </property>
    </widget>
    <widget class="QLabel" name="WelcomeName">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
+      <x>10</x>
+      <y>10</y>
       <width>591</width>
       <height>61</height>
      </rect>
@@ -72,6 +72,91 @@ color: rgb(255,255,255);</string>
     <property name="text">
      <string/>
     </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>100</y>
+      <width>331</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 30pt &quot;Corbel&quot;;
+color: rgb(255,255,255);</string>
+    </property>
+    <property name="text">
+     <string>Please select a user</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>70</y>
+      <width>1201</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QTableWidget" name="UserListTable">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>200</y>
+      <width>1000</width>
+      <height>500</height>
+     </rect>
+    </property>
+    <column>
+     <property name="text">
+      <string>Name</string>
+     </property>
+     <property name="font">
+      <font>
+       <family>Corbel</family>
+       <pointsize>20</pointsize>
+       <underline>true</underline>
+      </font>
+     </property>
+     <property name="textAlignment">
+      <set>AlignCenter</set>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Date of Birth</string>
+     </property>
+     <property name="font">
+      <font>
+       <family>Corbel</family>
+       <pointsize>20</pointsize>
+       <underline>true</underline>
+      </font>
+     </property>
+     <property name="textAlignment">
+      <set>AlignCenter</set>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Select User</string>
+     </property>
+     <property name="font">
+      <font>
+       <family>Corbel</family>
+       <pointsize>20</pointsize>
+       <underline>true</underline>
+      </font>
+     </property>
+     <property name="textAlignment">
+      <set>AlignCenter</set>
+     </property>
+    </column>
    </widget>
   </widget>
  </widget>
