--- a/UserList.ui
+++ b/UserList.ui
@@ -59,16 +59,16 @@ color: rgb(255,255,255);</string>
      <rect>
       <x>10</x>
       <y>100</y>
-      <width>761</width>
+      <width>931</width>
       <height>51</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 30pt &quot;Corbel&quot;;
+     <string notr="true">font: 22pt &quot;Corbel&quot;;
 color: rgb(255,255,255);</string>
     </property>
     <property name="text">
-     <string>Please select a Row to view a profile</string>
+     <string>Please select either a row on table or from drop down box to view a profile</string>
     </property>
    </widget>
    <widget class="Line" name="line">
@@ -128,7 +128,7 @@ color: rgb(255,255,255);</string>
     </column>
     <column>
      <property name="text">
-      <string>Select User Here!</string>
+      <string>Age</string>
      </property>
      <property name="font">
       <font>
@@ -145,9 +145,9 @@ color: rgb(255,255,255);</string>
    <widget class="QLabel" name="InvalidSelectionMade">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>810</x>
       <y>720</y>
-      <width>891</width>
+      <width>161</width>
       <height>61</height>
      </rect>
     </property>
@@ -168,7 +168,7 @@ color: rgb(255,0,0);</string>
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="CreateNewUser">
+   <widget class="QPushButton" name="PracCreateNewUser">
     <property name="geometry">
      <rect>
       <x>940</x>
@@ -204,6 +204,37 @@ background-color: rgb(147, 136, 162)</string>
     </property>
     <property name="text">
      <string>Submit</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>730</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 30pt &quot;Corbel&quot;;
+color: rgb(255,255,255);</string>
+    </property>
+    <property name="text">
+     <string>Row:</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="RowCounterBox">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>720</y>
+      <width>61</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 30pt &quot;Corbel&quot;;
+color: black;</string>
     </property>
    </widget>
   </widget>
