--- a/UserDetailedAnalyticsSelectionPage.ui
+++ b/UserDetailedAnalyticsSelectionPage.ui
@@ -48,9 +48,9 @@ background-color: rgb(147, 136, 162)</string>
    <widget class="QLabel" name="NameDetails">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>150</x>
       <y>10</y>
-      <width>1171</width>
+      <width>841</width>
       <height>61</height>
      </rect>
     </property>
@@ -505,6 +505,44 @@ color: rgb(255,255,255);</string>
     </property>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="SignOut">
+    <property name="geometry">
+     <rect>
+      <x>1070</x>
+      <y>10</y>
+      <width>121</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-radius: 20px;
+font: 20pt &quot;Corbel&quot;;
+color: rgb(255,255,255);
+background-color: rgb(147, 136, 162)</string>
+    </property>
+    <property name="text">
+     <string>Sign Out</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="ReturnButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>51</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-radius: 20px;
+font: 30pt;
+color: rgb(255,255,255);
+background-color: rgb(147, 136, 162)</string>
+    </property>
+    <property name="text">
+     <string>&lt;-</string>
     </property>
    </widget>
   </widget>
