--- a/UserDetailedAnalyticsSelectionPage.ui
+++ b/UserDetailedAnalyticsSelectionPage.ui
@@ -134,10 +134,10 @@ color: rgb(255,255,255);</string>
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>160</y>
-      <width>651</width>
-      <height>101</height>
+      <x>500</x>
+      <y>150</y>
+      <width>671</width>
+      <height>121</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -157,7 +157,7 @@ color: rgb(255,255,255);</string>
 color: rgb(255,255,255);</string>
        </property>
        <property name="text">
-        <string>Select Start Date:</string>
+        <string>Start Date:</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -188,7 +188,7 @@ color: rgb(255,255,255);</string>
 color: rgb(255,255,255);</string>
        </property>
        <property name="text">
-        <string>Select End Date:</string>
+        <string>End Date:</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
